UnjQuery up to line 343

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -1,3 +1,7 @@
+<html>
+<meta charset="utf-8">
+<body>
+
 # Editoria11y demo
 
 [« Back to the documentation](https://itmaybejj.github.io/editoria11y/)
@@ -151,3 +155,8 @@ SEVERAL WORDS IN A ROW OF CAPS LOCK TEXT WILL TRIGGER A MANUAL CHECK WARNING.
       }
     </script>
 </div>
+
+
+</body>
+
+</html>
