Tests abstracted into separate classes.

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -251,6 +251,10 @@
             <link rel="stylesheet" media="screen" href="../css/editoria11y.css">
             <script src="../demo/editoria11y-prefs.js"></script>
             <script src="../js/editoria11y-localization.js"></script>
+            <script src="../js/ed11y-test-links.js"></script>
+            <script src="../js/ed11y-test-images.js"></script>
+            <script src="../js/ed11y-test-headings.js"></script>
+            <script src="../js/ed11y-test-qa.js"></script>
             <script src="../js/editoria11y.js"></script>
             <!-- Instantiate-->
             <script>
