Uglify js now works.

--- a/tests/all_tests_dist.htm
+++ b/tests/all_tests_dist.htm
@@ -220,16 +220,7 @@
 
         <div hidden>
             <link href="./tests.css" rel="stylesheet">
-            <script src="../js/ed11y-localization.js"></script>
-            <script src="../js/ed11y-element-panel.js"></script>
-            <script src="../js/ed11y-element-result.js"></script>
-            <script src="../js/ed11y-element-alt.js"></script>
-            <script src="../js/ed11y-test-links.js"></script>
-            <script src="../js/ed11y-test-images.js"></script>
-            <script src="../js/ed11y-test-headings.js"></script>
-            <script src="../js/ed11y-test-text.js"></script>
-            <script src="../js/ed11y-test-embeds.js"></script>
-            <script src="../js/ed11y.js"></script>
+            <script src="../dist/editoria11y.min.js"></script>
             <!-- Instantiate-->
             <script>
               if (window.navigator.userAgent.match(/MSIE|Trident/) === null) {
