--- a/tests/all_tests_dist.htm
+++ b/tests/all_tests_dist.htm
@@ -224,8 +224,10 @@
             <!-- Instantiate-->
             <script>
               if (window.navigator.userAgent.match(/MSIE|Trident/) === null) {
-                // IE 11 is going to suffer under this load.
-                const ed11y = new Ed11y();
+                // TODO mvp Need to replace this with a test for ECMA level
+                const ed11y = new Ed11y({
+                    alertMode : 'assertive',
+                });
               }
             </script>
         </div>
