Fixes to event dispatchers.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -235,7 +235,7 @@
               if (window.navigator.userAgent.match(/MSIE|Trident/) === null) {
                 // IE 11 is going to suffer under this load.
                 const ed11y = new Ed11y({
-                    alertMode : 'assertive',
+                    alertMode : 'assertive'
                 });
               }
             </script>
