Comma spacer in :is statement.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -295,7 +295,8 @@
             <script>
                 const ed11y = new Ed11y({
                     alertMode : 'assertive',
-                    shadowComponents : 'shadow-test, shadow-test-no-hits', 
+                    //ignoreElements : '.positive *, .positive',
+                    //shadowComponents : 'shadow-test, shadow-test-no-hits', 
                     checkRoots : 'body', 
                 });
             </script>
