Fix image alt alignment, update docs for 2.x

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -305,6 +305,7 @@
             <script>
                 const ed11y = new Ed11y({
                     alertMode : 'assertive',
+//                    theme : 'darkTheme',
                     outlineExclude : '.utility',
                     linkIgnoreStrings: ['(opens in new window)'],
                     //ignoreElements : '.positive *, .positive',
