--- a/tests/all_tests_dist.htm
+++ b/tests/all_tests_dist.htm
@@ -227,6 +227,8 @@
                 // TODO mvp Need to replace this with a test for ECMA level
                 const ed11y = new Ed11y({
                     alertMode : 'assertive',
+                    linkIgnoreStrings: '\(opens in new window\)',
+                    embeddedContent: '#embed',
                 });
               }
             </script>
