Add ignoreAllIfAbsent parameter.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -313,6 +313,7 @@
                     //ignoreElements : '.positive *, .positive',
                     shadowComponents : 'shadow-test, shadow-test-no-hits', 
                     checkRoots : 'main',
+                    ignoreAllIfAbsent : 'main',
                 });
             </script>
             
