Give ignoreAll and doNotRun parameters parallel syntax.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -313,7 +313,9 @@
                     //ignoreElements : '.positive *, .positive',
                     shadowComponents : 'shadow-test, shadow-test-no-hits', 
                     checkRoots : 'main',
-                    ignoreAllIfAbsent : 'main',
+                    //ignoreAllIfAbsent : 'maain',
+                    //ignoreAllIfPresent : 'main',
+                    //preventCheckingIfAbsent : 'maian',
                 });
             </script>
             
