--- a/tests/pass.htm
+++ b/tests/pass.htm
@@ -147,7 +147,9 @@
                 const ed11y = new Ed11y({
                     alertMode : 'polite',
                     shadowComponents : 'shadow-test, shadow-test-no-hits', 
-                    checkRoots : 'body', 
+                    checkRoots : 'body',
+                    //ignoreAllIfAbsent : 'boody',
+                    //ignoreAllIfPresent : 'body',
                 });
             </script>
             
