Handle fallback for unspecified checkroots

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -311,7 +311,7 @@
                     linkIgnoreStrings: '\(opens in new window\)',
                     embeddedContent: '#embed',
                     //ignoreElements : '.positive *, .positive',
-                    shadowComponents : 'shadow-test, shadow-test-no-hits', 
+                    //shadowComponents : 'shadow-test, shadow-test-no-hits', 
                     checkRoots : 'main',
                     //ignoreAllIfAbsent : 'maain',
                     //ignoreAllIfPresent : 'main',
