Improve naming algorithm.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -185,9 +185,9 @@
         <p>These should all pass.</p>
         <ul>
             <li class="negative">Title <a href="#"  title="text is in the title"></a></li>
-            <li class="todo-negative">Aria-label [todo] <a href="#"  id="aria-test" aria-label="Aria label"></a></li>
-            <li class="todo-negative">Aria-label overriding [todo]<a href="#"  aria-label="Aria label">Click here</a></li>
-            <li class="todo-negative">Aria-labelledby [todo]<a href="#"  aria-labelledby="aria-test"></a></li>
+            <li class="negative">Aria-label [todo] <a href="#"  id="aria-test" aria-label="Aria label"></a></li>
+            <li class="negative">Aria-label overriding [todo]<a href="#"  aria-label="Aria label">Click here</a></li>
+            <li class="negative">Aria-labelledby [todo]<a href="#"  aria-labelledby="aria-test"></a></li>
         </ul>
 
 
