--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -303,7 +303,7 @@
         </script>
         <style>
             main {position: relative; z-index: 0;}
-            footer { position: fixed; z-index: 1; bottom: 0; left: 0; right: 0; background: silver;}
+            /*footer { position: fixed; z-index: 1; bottom: 0; left: 0; right: 0; background: silver;}*/
         </style>
         <link href="./tests.css" rel="stylesheet">
         <script src="../js/ed11y-localization.js"></script>
