Elements check race condition, paragraph with bold false positive.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -41,6 +41,8 @@
             <blockquote class="negative">Longer quotes are OK and should not be flagged.</blockquote>
 
             <p class="positive"><strong>All &lt;strong&gt; paragraph needs manual check</strong></p>
+
+            <p class="negative">You can aggregate Posts by a specific category and display the posts in a grid or in a standard list layout. In the example below, we created a Post Category named <strong>Announcement</strong>&nbsp;and used the Post List Block to list Posts<strong> </strong>tagged with the<strong> Announcement</strong> category.</p>
             
             <p class="positive"><b>All &lt;b&gt;old paragraph needs manual check</b></p>
             
