Translation proof of concept.

--- a/tests/lang_nl.htm
+++ b/tests/lang_nl.htm
@@ -316,6 +316,7 @@
         </style>
         <link href="./tests.css" rel="stylesheet">
         <script src="../js/ed11y-localization.js"></script>
+        <script src="../js/lang/nl.js"></script>
         <script src="../js/ed11y-element-panel.js"></script>
         <script src="../js/ed11y-element-result.js"></script>
         <script src="../js/ed11y-element-tip.js"></script>
@@ -330,7 +331,7 @@
         <script>
           const ed11y = new Ed11y({
             alertMode : 'assertive',
-            lang : 'en',
+            lang : 'nl',
             theme : 'darkTheme',
             outlineExclude : '.utility',
             linkIgnoreStrings: '\(opens in new window\)',
