link strings for file downloads

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -153,6 +153,8 @@
 
         <p class="positive"><a  href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">An informative video.</a></p>
 
+        <p class="negative">Link with inner download icon with aria-label: <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">Click here <span aria-label="download">^</span></a></p>
+
         <p class="negative"><a  href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">An informative video (opens in new window).</a></p>
 
         <h3 id="links-to-a-documents">Links to a documents</h3>
